clireg-wasm-filter/envoy-perf.yaml
bootstrap_extensions:
  - name: envoy.bootstrap.wasm
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
      singleton: true
      config:
        name: "bootstrap"
        root_id: client_reg
        configuration:
          "@type": "type.googleapis.com/google.protobuf.Struct"
          value:
            service:
                cluster: clireg
        vm_config:
          vm_id: "auth_vm"
          runtime: "envoy.wasm.runtime.v8"
          code:
            local:
              filename: "/etc/envoy/proxy-wasm-plugins/clireg_wasm_filter.wasm"
admin:
  access_log_path: /tmp/envoy.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090

static_resources:
  listeners:
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
      - name: apikey
        filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            strip_matching_host_port: true
            use_remote_address: true
            stat_prefix: apikey_ingress
            route_config:
              name: local_routes
              virtual_hosts:
                - name: local_service
                  domains:
                    - "apikey.ampgw.axway.com"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: nighthawk
            http_filters:
              - name: envoy.filters.http.wasm.auth
                typed_config:
                  "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                  type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  value:
                    config:
                      name: "http_auth"
                      root_id: http_bin_auth
                      configuration:
                        "@type": "type.googleapis.com/google.protobuf.Struct"
                        value:
                          creds:
                            api_id: "filter1"
                            spec:
                              api_key:
                                in: "header"
                                name: "x-api-key"
                      vm_config:
                        vm_id: "auth_vm"
                        runtime: "envoy.wasm.runtime.v8"
                        code:
                          local:
                            filename: "/etc/envoy/proxy-wasm-plugins/clireg_wasm_filter.wasm"
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        filter_chain_match:
          server_names:
            - "apikey.ampgw.axway.com"
        transport_socket:
          name: envoy.transport_socket.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_params:
                ecdh_curves:
                  - secp384r1
                cipher_suites:
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-ECDSA-CHACHA20-POLY1305
                  - ECDHE-RSA-AES256-GCM-SHA384
                  - ECDHE-RSA-CHACHA20-POLY1305
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
              alpn_protocols:
                - h2
                - http/1.1
              tls_certificates:
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCACEGm5LIJ8ecO
[...]
                    IhILoELZvEfEQJK+qgKiMQ==
                    -----END PRIVATE KEY-----
                certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIIDBDCCAeygAwIBAgIEbIEO/TANBgkqhkiG9w0BAQsFADAsMQ4wDAYDVQQLEwVh
[...]
                    1JMYXad+Emk=
                    -----END CERTIFICATE-----

      - name: basic
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: basic_ingress
              strip_matching_host_port: true
              use_remote_address: true
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "basic.ampgw.axway.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: nighthawk
              http_filters:
                - name: envoy.filters.http.wasm.auth
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        name: "http_auth"
                        root_id: http_bin_auth
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.Struct"
                          value:
                            creds:
                              api_id: "filter2"
                              hash_alg: "SHA512"
                              spec: "basic"
                        vm_config:
                          vm_id: "auth_vm"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/etc/envoy/proxy-wasm-plugins/clireg_wasm_filter.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        filter_chain_match:
          server_names:
            - "basic.ampgw.axway.com"
        transport_socket:
          name: envoy.transport_socket.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_params:
                ecdh_curves:
                  - secp384r1
                cipher_suites:
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-ECDSA-CHACHA20-POLY1305
                  - ECDHE-RSA-AES256-GCM-SHA384
                  - ECDHE-RSA-CHACHA20-POLY1305
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
              alpn_protocols:
                - h2
                - http/1.1
              tls_certificates:
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCACEGm5LIJ8ecO
[...]
                    IhILoELZvEfEQJK+qgKiMQ==
                    -----END PRIVATE KEY-----
                certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIIDBDCCAeygAwIBAgIEbIEO/TANBgkqhkiG9w0BAQsFADAsMQ4wDAYDVQQLEwVh
[...]
                    1JMYXad+Emk=
                    -----END CERTIFICATE-----
      - name: noauth
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: noauth_ingress
              strip_matching_host_port: true
              use_remote_address: true
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "noauth.ampgw.axway.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: nighthawk
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        filter_chain_match:
          server_names:
            - "noauth.ampgw.axway.com"
        transport_socket:
          name: envoy.transport_socket.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_params:
                ecdh_curves:
                  - secp384r1
                cipher_suites:
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-ECDSA-CHACHA20-POLY1305
                  - ECDHE-RSA-AES256-GCM-SHA384
                  - ECDHE-RSA-CHACHA20-POLY1305
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
              alpn_protocols:
                - h2
                - http/1.1
              tls_certificates:
                private_key:
                  inline_string: |
                    -----BEGIN PRIVATE KEY-----
                    MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCACEGm5LIJ8ecO
[...]
                    IhILoELZvEfEQJK+qgKiMQ==
                    -----END PRIVATE KEY-----
                certificate_chain:
                  inline_string: |
                    -----BEGIN CERTIFICATE-----
                    MIIDBDCCAeygAwIBAgIEbIEO/TANBgkqhkiG9w0BAQsFADAsMQ4wDAYDVQQLEwVh
[...]
                    1JMYXad+Emk=
                    -----END CERTIFICATE-----
  clusters:
    - name: nighthawk
      connect_timeout: 10s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: nighthawk
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10000
    - name: clireg
      type: STATIC
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: clireg
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051
